; ModuleID = '/home/carl/AnghaBench/git/extr_grep.c_grep_buffer.c'
source_filename = "/home/carl/AnghaBench/git/extr_grep.c_grep_buffer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.grep_opt = type { i32 }
%struct.grep_source = type { i8*, i64 }

@GREP_SOURCE_BUF = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @grep_buffer(%struct.grep_opt* %0, i8* %1, i64 %2) #0 {
  %4 = alloca %struct.grep_opt*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca %struct.grep_source, align 8
  %8 = alloca i32, align 4
  store %struct.grep_opt* %0, %struct.grep_opt** %4, align 8
  store i8* %1, i8** %5, align 8
  store i64 %2, i64* %6, align 8
  %9 = load i32, i32* @GREP_SOURCE_BUF, align 4
  %10 = call i32 @grep_source_init(%struct.grep_source* %7, i32 %9, i32* null, i32* null, i32* null)
  %11 = load i8*, i8** %5, align 8
  %12 = getelementptr inbounds %struct.grep_source, %struct.grep_source* %7, i32 0, i32 0
  store i8* %11, i8** %12, align 8
  %13 = load i64, i64* %6, align 8
  %14 = getelementptr inbounds %struct.grep_source, %struct.grep_source* %7, i32 0, i32 1
  store i64 %13, i64* %14, align 8
  %15 = load %struct.grep_opt*, %struct.grep_opt** %4, align 8
  %16 = call i32 @grep_source(%struct.grep_opt* %15, %struct.grep_source* %7)
  store i32 %16, i32* %8, align 4
  %17 = call i32 @grep_source_clear(%struct.grep_source* %7)
  %18 = load i32, i32* %8, align 4
  ret i32 %18
}

declare dso_local i32 @grep_source_init(%struct.grep_source*, i32, i32*, i32*, i32*) #1

declare dso_local i32 @grep_source(%struct.grep_opt*, %struct.grep_source*) #1

declare dso_local i32 @grep_source_clear(%struct.grep_source*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
